# SNAP

./: .dockerignore  .gitignore  .mcp.json  LICENSE  README.md  agent_setups.md  docker-compose.yml  pyproject.toml  run_mcp.bat  run_mcp.sh
.github/workflows/: build.yml
app/: Dockerfile  admin.py  dashboard.py  docker-compose.yml  main.py
app/config/: settings.py
app/extraction/: binary_packer.py  field_mapper.py  snapshot_builder.py
app/ingest/: complexity.py  file_router.py  github_cloner.py  local_loader.py  repos_watcher.py  staging_watcher.py
app/logging/: logger.py
app/mcp/: auth.py  run.py  security.py  server.py  tools.py
app/parsers/: nim_parser.nim  nim_parser.py  pre_converter.nim  semgrep_parser.py  text_extractor.py  tree_sitter_parser.py
app/schemas/: master_notebook.yaml
app/schemas/snapshot_templates/: classes_detail.json  config_api.json  config_metadata.json  config_structure.json  csv_data.json  csv_schema.json  doc_analysis.json  doc_content.json  doc_metadata.json  doc_synthesis.json  functions.json  functions_core.json
app/security/: network_policy.py  snap_limits.py
app/storage/: db.py  pg_sync.py  snapshot_repo.py
cache/semgrep/: rules.yaml
data/: snap.db
docker/: Dockerfile
scripts/: build_nim_parser.bat  ingest_memory.py  jsonl_to_md.py  migrate_add_versioning.py  run_mcp_tool.py
tests/: __init__.py
tests/benchmarks/: __init__.py  test_snapshot_timing.py
